point 1 finished perhaps

--- a/.gitignore
+++ b/.gitignore
@@ -265,7 +265,7 @@ assignment2/assignment2/
 assignment3/assignment3/
 
 # Data
-assignment3/Data/
+assignment3/data/
 Data.zip
 assignment3/Solution.ipynb
 assignment3/test.py
