more fancy things

--- a/.gitignore
+++ b/.gitignore
@@ -263,6 +263,7 @@ $RECYCLE.BIN/
 assignment1/assignment1env/
 assignment2/assignment2/
 assignment3/assignment3/
+assignment4/assignment4/
 
 # Data
 assignment3/data/
