started assign5; a) is done

--- a/.gitignore
+++ b/.gitignore
@@ -264,6 +264,8 @@ assignment1/assignment1env/
 assignment2/assignment2/
 assignment3/assignment3/
 assignment4/assignment4/
+assignment5/assignment5/
+assignment6/assignment6/
 
 # Data
 assignment3/data/
