more stuff that work

--- a/.gitignore
+++ b/.gitignore
@@ -273,3 +273,5 @@ Data.zip
 assignment3/Solution.ipynb
 assignment3/test.py
 group-project/owid-energy.csv.zip
+assignment6/XSound.npy
+assignment6/YSound.npy
