traffic group project

--- a/.gitignore
+++ b/.gitignore
@@ -294,3 +294,5 @@ assignment6/.vscode-server-insiders
 assignment6/speech_commands_v0.02
 assignment6/speech_commands_v0.02.tar.gz
 assignment6/.bash_history
+
+group-project/gtsrb/*
