assignment 5 final touches

--- a/.gitignore
+++ b/.gitignore
@@ -294,5 +294,16 @@ assignment6/.vscode-server-insiders
 assignment6/speech_commands_v0.02
 assignment6/speech_commands_v0.02.tar.gz
 assignment6/.bash_history
+assignment5/.config
+assignment5/.gnupg
+assignment5/.ipython
+assignment5/.jupyter
+assignment5/.keras
+assignment5/.local
+assignment5/.nv
+assignment5/.vscode-server-insiders
+assignment5/speech_commands_v0.02
+assignment5/speech_commands_v0.02.tar.gz
+assignment5/.bash_history
 
 group-project/gtsrb/*
